--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,4 +7,4 @@ jobs:
       - name: Run echo statement
         run: | 
           echo "Hello world01"
-          echo "Hellow world02
+          echo "Hellow world02"
