--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,8 @@
 name: hello world
-on: workflow_dispatch
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Build step
-        run: echo "A demo build"
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Build test
-        run: echo "A demo test"
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Build deploy
-        run: echo "A demo deploy"
-
+        run: echo " automatic trigger"
