--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build step
-        run: echo " automatic triggerr"
+        run: echo "Hello ${{vars.MY_NAME}}"
