--- a/.github/workflows/input_demo.yml
+++ b/.github/workflows/input_demo.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy the APP
-        run: echo "Deploy the application to ${{inputs.environment}}
+        run: echo "Deploy the application to ${{inputs.environment}}"
     
       
   
