--- a/.github/workflows/input_demo.yml
+++ b/.github/workflows/input_demo.yml
@@ -7,6 +7,7 @@ on:
         required: true
         default: dev
         options:
+        type: choice
           - dev
           - prod
           - uat
